# DSP4Guitar

./: .gitignore  CI_SETUP_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  CyberpunkLookAndFeel.h  DSP4GuitarApp.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Modulation.cpp  Modulation.h  Multi-effect blending.md  MultiEffectProcessor.cpp  MultiEffectProcessor.h  PluginEditor.cpp  PluginEditor.h  PresetManager.cpp  PresetManager.h  README.md  StereoWidening.cpp  StereoWidening.h  VST_Multi_Guitar_FX.md  additionalfx.md  filelist.md  interactivemidi.md  midiswitch.md  packaging.md  performance.md  vstplugin.md  vstplugin.txt
.github/: CI_DOCUMENTATION.md  CI_QUICKSTART.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
Documentation/: DeploymentOptimization.md  README2.MD  addingmorefx.md  effects-reference.md  presetvisualization.md  readme.md
scripts/: pre-commit-check.ps1  pre-commit-check.sh
